fix the render size not fit issue

--- a/style.css
+++ b/style.css
@@ -134,3 +134,8 @@ svg {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+
+#left, #supine, #right {
+    width: 100%;
+    height: auto;
+  }
